--- a/twentyfour/src/main/res/values/strings.xml
+++ b/twentyfour/src/main/res/values/strings.xml
@@ -5,27 +5,22 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="app_id">551502101596452</string>
-
     <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
     <string name="pull_to_refresh_release_label">Release to refresh...</string>
     <string name="pull_to_refresh_refreshing_label">Loading...</string>
     <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
-
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
     <string name="GPSAlertDialogTitle">GPS is setting</string>
     <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
-
     <string name="settings">Settings</string>
     <string name="cancel">Cancel</string>
-
     <string name="latitude">Latitude : </string>
     <string name="longitude">Longitude : </string>
-
     <string name="country">Country : </string>
     <string name="city">City : </string>
     <string name="postalCode">Postal Code : </string>
     <string name="addressLine">Address Line : </string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
 
 </resources>
